# doc-registration-flow-hub

./: .gitignore  README.md  pyproject.toml
airflow_dugs/: README.md  docker-compose.yaml
airflow_dugs/dags/: etl_dug.py
cuda-test/: test-cuda-work.ipynb
etl/: README.md  config.py  start_parsing_data_two_classes.py  update_parsing_data_two_classes.py
etl/utils/: check_images_in_directory.py  test_png_files.py
ml/llm/: README.md  prompts.py
ml/llm/local_model_save_and_use/: save_model.py  use_model.py
ml/llm/local_model_use/: use_model.py
ml/llm/ollama_model_use/: ollama_model.py  ollama_model_with_metrics.py
ml/ner/: README.md  natasha_rules.py  recog.py
ml/ocr/: README.md  get_text.py
ml/spliter/: README.md  split_pages.py
ml/spliter/utils/: delete_blank_page.py
services/: README.md  docker-compose.yml  fit_pages_model_prod.py  update_pages_model_prod.py
services/service_minio/test_minio/: requirements.txt  test_minio.py
services/service_mlflow/test_mlflow/: requirements.txt  test_mlflow.py
ui/: README.md  uwsgi.ini
ui/app/: forms.py  models.py  urls.py  utils.py  views.py
ui/app/static/app/css/: style.css
ui/app/static/app/js/: main.js
ui/app/templates/app/: main.html
ui/deploy/: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yaml
ui/web/: settings.py  urls.py
